# axeno-desktop

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: create-release.ps1  create-release.sh  run-two-client-test.ps1  run-two-client-test.sh  set-version.sh
src/: App.css  App.tsx  passwordStrength.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: identity.rs  lib.rs  messaging.rs  transport.rs
src/components/: icons.tsx
src/components/AddContact/: AddContact.css  AddContact.tsx
src/components/ChatSettings/: ChatSettings.css  ChatSettings.tsx
src/components/ChatView/: ChatView.css  ChatView.tsx
src/components/Onboarding/: Onboarding.css  Onboarding.tsx
src/components/PasswordStrengthMeter/: PasswordStrengthMeter.css  PasswordStrengthMeter.tsx
src/components/Settings/: Settings.css  Settings.tsx
src/components/Sidebar/: Sidebar.css  Sidebar.tsx
src/components/UpdatePrompt/: UpdatePrompt.css  UpdatePrompt.tsx
src/components/VerifyIdentity/: VerifyIdentity.css  VerifyIdentity.tsx
