[package]
name = "axeno-client"
version = "0.1.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "axeno_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Pinned to an explicit commit so a `cargo update` cannot silently move us onto
# upstream main. This is the revision the sealed-sender/prekey behaviour was
# reviewed against; bump it deliberately, not incidentally.
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", package = "libsignal-protocol", rev = "6e5a0466b35e23925ad4b3a31a8c6572471c33d9" }

argon2 = "0.5"
chacha20poly1305 = "0.10"
hkdf = "0.12"
zeroize = { version = "1", features = ["derive"] }
hex = "0.4"
thiserror = "1"

arti-client = { version = "0.41", features = ["tokio", "static", "onion-service-client"] }
tor-rtcompat = { version = "0.41", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

tokio-tungstenite = "0.24"
# We do not call reqwest directly. This declares the same reqwest that
# tauri-plugin-updater pulls in, with the `socks` feature on, so cargo feature
# unification enables SOCKS support there too — letting the updater route through
# our local Arti SOCKS proxy (Tor). Keep the major version in sync with the plugin.
reqwest = { version = "0.13", default-features = false, features = ["socks"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
base64 = "0.22"

# getrandom for our own secure key generation; rand_core/rand_chacha 0.9 match current libsignal-protocol
getrandom = "0.2"
rand_core = "0.9"
rand_chacha = "0.9"

# The updater only applies to desktop targets (it replaces the installed bundle).
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
